# FIRE_CP_Glimpse

./: .gitignore  Makefile  README.md  example.py  main.c  memo.md  pyproject.toml  requirements.txt
NGCrover/: main.py
NGCrover/RoverExample.Components.Controller/: RoverExample.Components.Controller  RoverExample.Components.Controller.makefile
NGCrover/RoverExample.Components.Rover/: RoverExample.Components.Rover  RoverExample.Components.Rover.fmu  RoverExample.Components.Rover.makefile  RoverExample_Components_Rover_info.json
NGCrover/RoverExample.Components.Webserver/: RoverExample.Components.Webserver.fmu  RoverExample.Components.Webserver_08bnd.c  RoverExample.Components.Webserver_info.json  RoverExample.Components.Webserver_init.xml
examples/GSdrone/: GSdrone_2p0.ipynb  drone_specs.json  dronesim.py  fmu.py  modelica.py  utils.py
examples/GSdrone/model/: MFQuadrotor.mo
examples/NGCrover/: fmu.py  main.ipynb  rover_parameters.json  roversim.py
examples/NGCrover/RoverExample.Components.Controller/: RoverExample.Components.Controller.fmu  RoverExample.Components.Controller_info.json
examples/NGCrover/RoverExample.Components.Rover/: RoverExample.Components.Rover_02nls.c  RoverExample.Components.Rover_06inz.c  RoverExample.Components.Rover_info.json
examples/NGCrover/RoverExample.Components.Webserver/: RoverExample.Components.Webserver.c  RoverExample.Components.Webserver.makefile  RoverExample.Components.Webserver_06inz.c  RoverExample_Components_Webserver_info.json
examples/bouncingball/: bouncingball.mo
examples/pendulum/: pendulumPID.mo
fmu_bak/NGCrover/: roversim.py
fmu_bak/NGCrover/RoverExample.Components.Controller/: RoverExample.Components.Controller.c  RoverExample.Components.Controller_init.xml  RoverExample_Components_Controller_info.json
models/: Rover3D.mo
models/hybrid_benchmarks/: BouncingBall.mo  LinearHybridTwoTank.mo
scenarios/: bouncingball_single_run.yaml  rover_fmu.yaml  test.yaml
src/bak/: ball_translate.py  run_modelica_bak.py  run_rumoca_bak.py
src/cp_glimpse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cp_glimpse_py/: cli.py  main.py
src/cp_glimpse_py/backend/: __init__.py  (+8 more)
src/sim/: sim_modelica.py
src/translator/: casadi_translator.py
(+68 files in other folders)
