[tool.poetry]
name = "cp-glimpse"
version = "0.1.0"
description = "Modelica → CasADi translation and simulation framework using rumoca"
authors = ["Minhyun Cho <minhyun@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

# ----------------------------------
# Python version
# ----------------------------------
[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Core scientific stack
numpy = "^1.26"
scipy = "^1.11"
pandas = "^2.1"

# CasADi (pin if you want reproducibility)
casadi = "^3.6.5"

# Logging / utilities
rich = "^13.7"

# ----------------------------------
# rumoca as a local submodule
# ----------------------------------
rumoca = { path = "submodules/rumoca", develop = true }

# ----------------------------------
# Optional / future (commented)
# ----------------------------------
# sympy = "^1.12"
# pydantic = "^2.6"

# ----------------------------------
# Dev dependencies
# ----------------------------------
[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.2"
ruff = "^0.3"
mypy = "^1.8"

# ----------------------------------
# Tooling configs
# ----------------------------------
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

# ----------------------------------
# Build system
# ----------------------------------
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"