[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cp-glimpse"
version = "0.1.0"
description = "CP Glimpse: Multi-backend Modelica simulation framework (FMU, CasADi, Direct)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Minhyun Cho" }
]

dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "matplotlib",
]

# CLI entry point
[project.scripts]
cp-glimpse = "cp_glimpse_py.cli:main"

# --- setuptools config for src/ layout ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]